--- a/chatbot.html
+++ b/chatbot.html
@@ -18,6 +18,7 @@
             inset -24px -24px 48px #8aa0df;
            margin-right: 100px;
            margin-left: 100px;
+           transform: scale(1);
         }
 
         h1 {
