--- a/chatbot.html
+++ b/chatbot.html
@@ -18,8 +18,8 @@
             inset -24px -24px 48px #8aa0df;
            margin-right: 100px;
            margin-left: 100px;
-           min-right: 100px;
-           min-left: 100px;
+           min-weight: 100px;
+           min-height: 100px;
         }
 
         h1 {
