--- a/chatbot.html
+++ b/chatbot.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-    <h1>Leave Your Worries Behind😄</h1>
+    <h1>Leave Your Worries Behind😉</h1>
     <iframe src="https://ora.sh/embed/a9ccf0c5-35ef-44d4-a352-aea3e122b5c0" style="width: 500px; height: 400px;"></iframe>
 </body>
 </html>
